<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/half_transparent_black"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="选择提醒周期"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/textSize_18"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_once"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:text="只响一次"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_0"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="每天"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_1"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/mon"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_2"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tue"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_3"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/wed"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_4"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/thu"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_5"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/fri"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_6"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sat"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_7"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/sun"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/txt_17"/>

        <TextView style="@style/horizontal_line_style"/>

        <TextView
            android:id="@+id/tv_drugcycle_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@null"
            android:gravity="center"
            android:text="@string/cycle_sure"
            android:textColor="@color/text_color_66"
            android:textSize="@dimen/textSize_18"/>

    </LinearLayout>

</RelativeLayout>