<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:background="@color/xinyongka"
            android:id="@+id/qb_ry_xinyka"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/qb_image_xinyka"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/huankuan"/>

            <TextView
                android:id="@+id/qb_txt_xinyka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/qb_image_xinyka"
                android:text="@string/qianbao_xinyka"
                android:textColor="@color/text_color_bg"
                android:textSize="@dimen/txt_15"/>

            <TextView
                android:id="@+id/qb_txt_xinyka_yuer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/qb_txt_xinyka"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_toRightOf="@id/qb_image_xinyka"
                android:text="@string/qianbao_xinyka_yuer"
                android:textColor="@color/text_color_bg"
                android:textSize="@dimen/txr_13"/>

            <TextView
                android:id="@+id/xinyka_jia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/calendar_jia"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_16"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>