<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F0EFF3">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/reports_my"
            android:textColor="@color/blue"
            android:textSize="@dimen/txt_18"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_title"

        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tv_bg1"
            android:gravity="left"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/curr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ff000000"/>

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tv_bg"
            android:gravity="right"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_piechart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_layout"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:id="@+id/pieLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <star.liuwen.com.cash_books.PieChart.PieChartView
                android:id="@+id/parbar_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reports_xiaofei"
                    android:textColor="#BBBDC4"
                    android:textSize="14sp"/>


                <star.liuwen.com.cash_books.PieChart.CountView
                    android:id="@+id/txtMonery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3,870.30"
                    android:textColor="#6B6363"
                    android:textSize="24sp"/>


                <TextView
                    android:id="@+id/find_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:text="@string/reports_find_detail"
                    android:textColor="#64BCF3"
                    android:textSize="14sp"/>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/text_item_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pieLayout"
            android:layout_centerHorizontal="true"
            android:background="@drawable/show_chart_bg"
            android:gravity="center"
            android:textColor="#000000"
            android:visibility="gone"/>

        <RelativeLayout
            android:id="@+id/infoLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pieLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="医疗缴费"
                android:textColor="#333333"
                android:textSize="16sp"/>

            <RelativeLayout
                android:id="@+id/layoutBaseInfo"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_below="@+id/txtView3"
                android:layout_centerHorizontal="true"
                android:background="@drawable/group"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/txtView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reports_xiaofei_detail"
                    android:textColor="#808080"
                    android:textSize="@dimen/textSize_16"/>

                <TextView
                    android:id="@+id/item_xiaofei_detail"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/txtView1"
                    android:gravity="right"
                    android:text="1280.00元"
                    android:textColor="#333333"
                    android:textSize="@dimen/textSize_16"
                    />
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>

    <ViewStub
        android:id="@+id/view_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout="@layout/layout_empty_reports"/>
</RelativeLayout>
